// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    loggedIn={false}
    username=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="header__h1"
>
          Lost & Found
</h1>,
        <ul
          className="header__nav-list"
>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/"
                    >
                              Home
                    </Link>
          </li>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/forms/login"
                    >
                              Log In
                    </Link>
          </li>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/forms/signup"
                    >
                              Sign Up
                    </Link>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lost & Found",
          "className": "header__h1",
        },
        "ref": null,
        "rendered": "Lost & Found",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/"
              >
                            Home
              </Link>
</li>,
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/forms/login"
              >
                            Log In
              </Link>
</li>,
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/forms/signup"
              >
                            Sign Up
              </Link>
</li>,
          ],
          "className": "header__nav-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/"
>
                Home
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Home",
                "className": "header__nav-link",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Home",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/forms/login"
>
                Log In
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log In",
                "className": "header__nav-link",
                "replace": false,
                "to": "/forms/login",
              },
              "ref": null,
              "rendered": "Log In",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/forms/signup"
>
                Sign Up
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Sign Up",
                "className": "header__nav-link",
                "replace": false,
                "to": "/forms/signup",
              },
              "ref": null,
              "rendered": "Sign Up",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="header__h1"
>
            Lost & Found
</h1>,
          <ul
            className="header__nav-list"
>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/"
                        >
                                    Home
                        </Link>
            </li>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/forms/login"
                        >
                                    Log In
                        </Link>
            </li>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/forms/signup"
                        >
                                    Sign Up
                        </Link>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lost & Found",
            "className": "header__h1",
          },
          "ref": null,
          "rendered": "Lost & Found",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/"
                >
                                Home
                </Link>
</li>,
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/forms/login"
                >
                                Log In
                </Link>
</li>,
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/forms/signup"
                >
                                Sign Up
                </Link>
</li>,
            ],
            "className": "header__nav-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/"
>
                  Home
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Home",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Home",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/forms/login"
>
                  Log In
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log In",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/forms/login",
                },
                "ref": null,
                "rendered": "Log In",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/forms/signup"
>
                  Sign Up
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Sign Up",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/forms/signup",
                },
                "ref": null,
                "rendered": "Sign Up",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should match a snapshot 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    loggedIn={true}
    username="jon"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="header__h1"
>
          Lost & Found
</h1>,
        <ul
          className="header__nav-list"
>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/"
                    >
                              Home
                    </Link>
          </li>
          <li
                    className="header__nav-list-item"
          >
                    <Link
                              className="header__nav-link"
                              replace={false}
                              to="/"
                    >
                              Log Out
                    </Link>
          </li>
          <li
                    className="header__nav-list-item"
          >
                    <div
                              className="header__nav-link"
                    >
                              jon
                    </div>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lost & Found",
          "className": "header__h1",
        },
        "ref": null,
        "rendered": "Lost & Found",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/"
              >
                            Home
              </Link>
</li>,
            <li
              className="header__nav-list-item"
>
              <Link
                            className="header__nav-link"
                            replace={false}
                            to="/"
              >
                            Log Out
              </Link>
</li>,
            <li
              className="header__nav-list-item"
>
              <div
                            className="header__nav-link"
              >
                            jon
              </div>
</li>,
          ],
          "className": "header__nav-list",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/"
>
                Home
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Home",
                "className": "header__nav-link",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Home",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-link"
                replace={false}
                to="/"
>
                Log Out
</Link>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Log Out",
                "className": "header__nav-link",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Log Out",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="header__nav-link"
>
                jon
</div>,
              "className": "header__nav-list-item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "jon",
                "className": "header__nav-link",
              },
              "ref": null,
              "rendered": "jon",
              "type": "div",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="header__h1"
>
            Lost & Found
</h1>,
          <ul
            className="header__nav-list"
>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/"
                        >
                                    Home
                        </Link>
            </li>
            <li
                        className="header__nav-list-item"
            >
                        <Link
                                    className="header__nav-link"
                                    replace={false}
                                    to="/"
                        >
                                    Log Out
                        </Link>
            </li>
            <li
                        className="header__nav-list-item"
            >
                        <div
                                    className="header__nav-link"
                        >
                                    jon
                        </div>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lost & Found",
            "className": "header__h1",
          },
          "ref": null,
          "rendered": "Lost & Found",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/"
                >
                                Home
                </Link>
</li>,
              <li
                className="header__nav-list-item"
>
                <Link
                                className="header__nav-link"
                                replace={false}
                                to="/"
                >
                                Log Out
                </Link>
</li>,
              <li
                className="header__nav-list-item"
>
                <div
                                className="header__nav-link"
                >
                                jon
                </div>
</li>,
            ],
            "className": "header__nav-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/"
>
                  Home
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Home",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Home",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-link"
                  replace={false}
                  to="/"
>
                  Log Out
</Link>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Log Out",
                  "className": "header__nav-link",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Log Out",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="header__nav-link"
>
                  jon
</div>,
                "className": "header__nav-list-item",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "jon",
                  "className": "header__nav-link",
                },
                "ref": null,
                "rendered": "jon",
                "type": "div",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
